--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -8,19 +8,22 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server":"json-server --watch db.json"
+    "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/styled-components": "^5.1.26",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
