--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "@phosphor-icons/react": "^2.0.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
